code review addressed

--- a/Timer_JS_5-6.html
+++ b/Timer_JS_5-6.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="timer">
-    <h1 class="timestring">00:00:00.000</h1>
+    <h1 class="timeString">00:00:00.000</h1>
     <div class="buttons">
-        <button class="startbtn btn btn-success">start</button>
-        <button class="pausebtn btn btn-primary">pause</button>
-        <button class="splitbtn btn btn-warning">split</button>
-        <button class="resetbtn btn btn-danger">reset</button>
+        <button class="startBtn btn btn-success">start</button>
+        <button class="pauseBtn btn btn-primary">pause</button>
+        <button class="splitBtn btn btn-warning">split</button>
+        <button class="resetBtn btn btn-danger">reset</button>
     </div>
-    <ol class="printedtime"></ol>
+    <ol class="printedTime"></ol>
 
 
     <script type="text/javascript" src="js/Timer_JS_5-6.js"></script>
